静态资源本地化

--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
+                        <img src="/images/320_free_quote.svg"
                             alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
@@ -104,8 +104,8 @@
                     <div class="col-md-4 dn768">
                         <div class="custom-img-point">
                             <img class="img-responsive"
-                                src="https://openledger.info/wp-content/themes/openledger/assets/images/Services/custom-blockchain1.png"
-                                srcset="https://openledger.info/wp-content/themes/openledger/assets/images/Services/custom-blockchain1@2x.png 2x"
+                                src="/images/Services/custom-blockchain1.png"
+                                srcset="/images/Services/custom-blockchain1@2x.png 2x"
                                 alt="Eosio blockchain">
                         </div>
                     </div>
@@ -119,8 +119,8 @@
                     <div class="col-md-4 dn768">
                         <div class="custom-img-point">
                             <img class="img-responsive"
-                                src="https://openledger.info/wp-content/themes/openledger/assets/images/Services/custom-blockchain2.png"
-                                srcset="https://openledger.info/wp-content/themes/openledger/assets/images/Services/custom-blockchain2@2x.png 2x"
+                                src="/images/Services/custom-blockchain2.png"
+                                srcset="/images/Services/custom-blockchain2@2x.png 2x"
                                 alt="Eosio blockchain">
                         </div>
                     </div>
@@ -176,7 +176,7 @@
             </div>
         </div>
         <div class="container dot-wrap60px">
-            <img src="https://openledger.info/wp-content/themes/openledger/assets/images/Solutions/Logistics/dots.svg"
+            <img src="/images/Solutions/Logistics/dots.svg"
                 alt="Dots" class="dots">
         </div>
 
@@ -207,33 +207,33 @@
                     <div class="grey-block">
                         <div class="custom-tech-point-icon df">
                             <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/bitshares.svg"
+                                <img src="/images/Uploads/bitshares.svg"
                                     alt="BitShares">
                             </div>
                             <span>比特股</span>
                         </div>
                         <div class="custom-tech-point-icon df">
                             <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/bitcoin.svg" alt="genEOS">
+                                <img src="/images/Uploads/bitcoin.svg" alt="genEOS">
                             </div>
                             <span>GenEOS</span>
                         </div>
                         <div class="custom-tech-point-icon df">
                             <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/ethereum.svg"
+                                <img src="/images/Uploads/ethereum.svg"
                                     alt="Ethereum">
                             </div>
                             <span>以太坊</span>
                         </div>
                         <div class="custom-tech-point-icon df">
                             <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/08/eos.svg" alt="EOSIO">
+                                <img src="/images/Uploads/eos.svg" alt="EOSIO">
                             </div>
                             <span>EOSIO</span>
                         </div>
                         <div class="custom-tech-point-icon df">
                             <div class="wrap-img">
-                                <img src="https://openledger.info/wp-content/uploads/2018/10/hyperledger.svg"
+                                <img src="/images/Uploads/hyperledger.svg"
                                     alt="HyperLedger">
                             </div>
                             <span>超级账本</span>
@@ -247,7 +247,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
+                        <img src="/images/320_free_quote.svg"
                             alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
