--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
+                        <img src="/images/320_free_quote.svg"
                             alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
@@ -222,8 +222,8 @@
                         </div>
                     </div>
                     <div class="col-md-4 tiles-label-img hidden-768">
-                        <img src="https://openledger.info/wp-content/uploads/2019/05/eosio-blockchain.png"
-                            srcset="https://openledger.info/wp-content/uploads/2019/05/eosio-blockchain@2x.png 2x"
+                        <img src="/images/Uploads/eosio-blockchain.png"
+                            srcset="/images/Uploads/eosio-blockchain@2x.png 2x"
                             alt="">
                     </div>
 
@@ -250,7 +250,7 @@
                     <div class="slider-explore-blockchain-solutions">
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2018/12/01.svg" alt="Supply chain">
+                                <img src="/images/Uploads/01.svg" alt="Supply chain">
                             </div>
                             <h3 class="explore-slide-title">供应链</h3>
                             <p class="explore-slide-desc">如果您对供应链的各种区块链解决方案感兴趣，我们将提供丰富的经验和专业知识。</p>
@@ -258,7 +258,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2018/12/02.svg" alt="IoT">
+                                <img src="/images/Uploads/02.svg" alt="IoT">
                             </div>
                             <h3 class="explore-slide-title">物联网</h3>
                             <p class="explore-slide-desc">OpenLedger提供了创新的解决方案，将物联网与加密的，不变的，可审核的区块链相结合。</p>
@@ -266,7 +266,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/01/Logistics-1.svg"
+                                <img src="/images/Uploads/Logistics-1.svg"
                                     alt="Logistics">
                             </div>
                             <h3 class="explore-slide-title">后勤</h3>
@@ -275,7 +275,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/01/Healthcare-1.svg"
+                                <img src="/images/Uploads/Healthcare-1.svg"
                                     alt="Healthcare">
                             </div>
                             <h3 class="explore-slide-title">卫生保健</h3>
@@ -284,7 +284,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/02/real-estate.svg"
+                                <img src="/images/Uploads/real-estate.svg"
                                     alt="Real estate">
                             </div>
                             <h3 class="explore-slide-title">房地产</h3>
@@ -293,7 +293,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/Insurance.svg"
+                                <img src="/images/Uploads/Insurance.svg"
                                     alt="Insurance">
                             </div>
                             <h3 class="explore-slide-title">保险</h3>
@@ -302,7 +302,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/automotive.svg"
+                                <img src="/images/Uploads/automotive.svg"
                                     alt="Automotive">
                             </div>
                             <h3 class="explore-slide-title">汽车行业</h3>
@@ -311,7 +311,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/retail.svg" alt="Retail">
+                                <img src="/images/Uploads/retail.svg" alt="Retail">
                             </div>
                             <h3 class="explore-slide-title">零售</h3>
                             <p class="explore-slide-desc">利用零售区块链建立消费者信任，提高供应链可管理性，防止假冒商品。</p>
@@ -319,7 +319,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/04/education.svg"
+                                <img src="/images/Uploads/education.svg"
                                     alt="Education">
                             </div>
                             <h3 class="explore-slide-title">教育</h3>
@@ -328,7 +328,7 @@
                         </div>
                         <div class="explore-slide">
                             <div class="explore-slide-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/04/charity.svg" alt="Charity">
+                                <img src="/images/Uploads/charity.svg" alt="Charity">
                             </div>
                             <h3 class="explore-slide-title">慈善机构</h3>
                             <p class="explore-slide-desc">与捐助者，受助者和其他利益相关者建立信任，确保援助到达合适的人，并提高管理成本。</p>
