--- a/views/services/graphene-bitshares.ejs
+++ b/views/services/graphene-bitshares.ejs
@@ -176,7 +176,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
+                        <img src="/images/320_free_quote.svg"
                             alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
@@ -203,8 +203,8 @@
                         <div class="col-md-4">
                             <div class="point">
                                 <div class="covered-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2018/11/Automotive-image.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2018/11/Automotive-image@2x.png 2x"
+                                        src="/images/Uploads/Automotive-image.png"
+                                        srcset="/images/Uploads/Automotive-image@2x.png 2x"
                                         alt="Automotive"></div>
                                 <h3>Automotive</h3>
                                 <div class="text">
@@ -218,8 +218,8 @@
                         <div class="col-md-4">
                             <div class="point">
                                 <div class="covered-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2018/11/Supply-chain-image.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2018/11/Supply-chain-image@2x.png 2x"
+                                        src="/images/Uploads/Supply-chain-image.png"
+                                        srcset="/images/Uploads/Supply-chain-image@2x.png 2x"
                                         alt="Supply chains"></div>
                                 <h3>Supply chains</h3>
                                 <div class="text">
@@ -233,8 +233,8 @@
                         <div class="col-md-4">
                             <div class="point">
                                 <div class="covered-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2018/11/Logistic-image.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2018/11/Logistic-image@2x.png 2x"
+                                        src="/images/Uploads/Logistic-image.png"
+                                        srcset="/images/Uploads/Logistic-image@2x.png 2x"
                                         alt="Logistics"></div>
                                 <h3>Logistics</h3>
                                 <div class="text">
