--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -144,8 +144,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
-                            alt="">
+                        <img src="/images/320_free_quote.svg" alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="block-call__text-btn">
@@ -168,8 +167,8 @@
                     class="row tiles-lable hyperledger-tiles-lable dev01-tiles-lable tiles-lable-collapse point-list-accordion-plus">
                     <div class="d-none d-sm-none d-md-block col-md-6 col-lg-4">
                         <div class="hyperledger-tile-img">
-                            <img src="https://openledger.info/wp-content/uploads/2018/11/Hyperledger-frameworks.png"
-                                srcset="https://openledger.info/wp-content/uploads/2018/11/Hyperledger-frameworks@2x.png 2x"
+                            <img src="/images/Uploads/Hyperledger-frameworks.png"
+                                srcset="/images/Uploads/Hyperledger-frameworks@2x.png 2x"
                                 alt="Hyperledger frameworks">
                         </div>
                     </div>
@@ -231,56 +230,6 @@
                     </div>
                 </div>
             </div>
-            <!--                 <div class="dev-toolkit-content">
-                        <h2>Our Hyperledger development toolkit</h2>
-                        <div class="row tiles-lable hyperledger-tiles-lable dev02-tiles-lable tiles-lable-collapse point-list-accordion-plus">
-                            <div class="col-md-6 col-lg-4 dev-tile-icon">
-                                <div class="tile tile-collapse point-accordion-plus tile-collapse-active">
-                                    <h3>Benchmarking with Hyperledger Caliper</h3>
-                                    <div class="text">
-                                       <p>Caliper is a blockchain benchmark tool that allows us to evaluate a network’s efficiency and tweak it to reach peak values. In particular, we can optimize a network’s resource utilization, improve blockchain performance, and increase transaction latency.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-lg-4 dev-tile-icon">
-                                <div class="tile tile-collapse point-accordion-plus">
-                                    <h3>Speeding up  with Hyperledger<br> Cello</h3>
-                                    <div class="text">
-                                        <p>Cello is a blockchain module toolkit we use to accelerate the development and deployment of blockchains and Hyperledger smart contracts.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="d-none d-sm-none d-md-block col-md-6 col-lg-4">
-                                <div class="hyperledger-tile-img">
-                                    <img src="https://openledger.info/wp-content/uploads/2018/11/toolkit-image.png" srcset="https://openledger.info/wp-content/uploads/2018/11/toolkit-image@2x.png 2x" alt="Our Hyperledger development toolkit">
-                            </div>
-                                </div>
-                                <div class="col-md-6 col-lg-4 dev-tile-icon">
-                                    <div class="tile tile-collapse point-accordion-plus">
-                                        <h3>Integrating through Hyperledger Composer</h3>
-                                        <div class="text">
-                                            <p>Composer is a collaboration tool we use to ensure smooth integration of the created blockchain business network with your existing systems and data, including assets and transactions.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-lg-4 dev-tile-icon">
-                                    <div class="tile tile-collapse point-accordion-plus">
-                                        <h3>Ensuring interoperability with Hyperledger Quilt</h3>
-                                        <div class="text">
-                                            <p>Quilt is a business blockchain tool featuring the Interledger payments protocol (ILP). It allows us to enable interoperability and value transfer across distributed and non-distributed ledgers, maintaining single account integrity.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-lg-4 dev-tile-icon">
-                                    <div class="tile tile-collapse point-accordion-plus">
-                                        <h3>Browsing in Hyperledger Explorer</h3>
-                                        <div class="text">
-                                            <p>Explorer is a blockchain browser we use for assessing the network’s activity, such as viewing transactions and associated data, blocks, chain codes, and network information.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
             <div class="fabric-block">
                 <h2>来自OpenLedger的Hyperledger项目</h2>
                 <div class="gor-100">
@@ -297,11 +246,11 @@
                                 <div class="fabric-slide">
                                     <div class="fabric-slide-top">
                                         <div class="fabric-slide-top-logo-blue">
-                                            <img src="https://openledger.info/wp-content/uploads/2019/08/hyperledger-fabric.svg"
+                                            <img src="/images/Uploads/hyperledger-fabric.svg"
                                                 alt="">
                                         </div>
                                         <div class="fabric-slide-top-logo-grey">
-                                            <img src="https://openledger.info/wp-content/uploads/2019/08/olway.svg"
+                                            <img src="/images/Uploads/olway.svg"
                                                 alt="">
                                         </div>
                                     </div>
@@ -357,11 +306,11 @@
                                 <div class="fabric-slide">
                                     <div class="fabric-slide-top">
                                         <div class="fabric-slide-top-logo-blue">
-                                            <img src="https://openledger.info/wp-content/uploads/2019/08/hyperledger-sawtooth.svg"
+                                            <img src="/images/Uploads/hyperledger-sawtooth.svg"
                                                 alt="">
                                         </div>
                                         <div class="fabric-slide-top-logo-grey">
-                                            <img src="https://openledger.info/wp-content/uploads/2019/08/centaur.svg"
+                                            <img src="/images/Uploads/centaur.svg"
                                                 alt="">
                                         </div>
                                     </div>
