--- a/views/services/research-and-development.ejs
+++ b/views/services/research-and-development.ejs
@@ -106,13 +106,13 @@
             <div class="container">
                 <div class="manufacturer-scheme-content">
                     <img class="manufacturer-dots"
-                        src="https://openledger.info/wp-content/themes/openledger/assets/images/Solutions/Logistics/dots.svg"
+                        src="/images/Solutions/Logistics/dots.svg"
                         alt="Dots">
                     <img class="manufacturer-image manufacturer-image-1170"
-                        src="https://openledger.info/wp-content/themes/openledger/assets/images/Services/Research/scheme1170.svg"
+                        src="/images/Services/Research/scheme1170.svg"
                         alt="OpenLedger research and development department">
                     <img class="manufacturer-image manufacturer-image-1024"
-                        src="https://openledger.info/wp-content/themes/openledger/assets/images/Services/Research/scheme1024.svg"
+                        src="/images/Services/Research/scheme1024.svg"
                         alt="OpenLedger research and development department">
                     <div class="manufacturer-points research-manufacturer-points">
                         <div class="manufacturer-point">
@@ -179,7 +179,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
+                        <img src="/images/320_free_quote.svg"
                             alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
@@ -191,28 +191,7 @@
                     </div>
                 </div>
             </div>
-        </div><!-- Quote -->
-
-        <!-- <div class="research-blockchain-workshops">
-            <div class="container">
-                <h2>区块链研讨会</h2>
-                <div class="gor-100">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <img class="img-responsive"
-                                src="https://openledger.info/wp-content/uploads/2019/05/Education-image.png"
-                                srcset="https://openledger.info/wp-content/uploads/2019/05/Education-image@2x.png 2x"
-                                alt="Blockchain workshops">
-                        </div>
-                        <div class="col-md-7">
-                            <div class="h4">研发专家与OpenLedger区块链专家一起，就区块链技术和您的项目举办了现场和远程教育研讨会。</div>
-                            <p><a class="link m-0" href="/services/blockchain-workshops/">了解更多</a></p>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-            </div>
-        </div> -->
+        </div>
         <div class="research-blockchain-consulting">
             <div class="container">
                 <div>
