--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -57,6 +57,7 @@
             <div class="industry-is-covered-content sc-content">
                 <h2>企业智能合约</h2>
                 <div class="h4 gor-100">
+                    <p>智能合约是编码为计算机协议的虚拟协议。</p>
                     <p>任何一方，包括两个协议持有人，都不能改变智能合约的内容。必须更改整个网络，才有可能被修改。</p>
                     <p>智能合约是可以自动执行的，因此智能合约是实现跨各行业、领域程序的强大工具。OpenLedger的专家团队致力于基于以太坊，超级账本和EOS的智能合约为现有行业所面临的问题提供基于智能合约的解决方案。
                     </p>
@@ -110,7 +111,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
+                        <img src="/images/320_free_quote.svg"
                             alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
@@ -302,7 +303,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="https://openledger.info/wp-content/themes/openledger/assets/images/320_free_quote.svg"
+                        <img src="/images/320_free_quote.svg"
                             alt="">
                     </div>
                     <div class="col-md-6 col-sm-12">
