--- a/views/solutions/automotive.ejs
+++ b/views/solutions/automotive.ejs
@@ -253,22 +253,22 @@
                 <h3>Companies that use blockchain automotive solutions:</h3>
                 <div class="automotive-solutions-icons companies-icons companies-icons6">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/manufacturer_1.svg"
+                    <img src="/images/Uploads/manufacturer_1.svg"
                         alt="manufacturer_1">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/manufacturer_2.svg"
+                    <img src="/images/Uploads/manufacturer_2.svg"
                         alt="manufacturer_2">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/manufacturer_3.svg"
+                    <img src="/images/Uploads/manufacturer_3.svg"
                         alt="manufacturer_3">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/manufacturer_4.svg"
+                    <img src="/images/Uploads/manufacturer_4.svg"
                         alt="manufacturer_4">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/manufacturer_5.svg"
+                    <img src="/images/Uploads/manufacturer_5.svg"
                         alt="manufacturer_5">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/manufacturer_6.svg"
+                    <img src="/images/Uploads/manufacturer_6.svg"
                         alt="manufacturer_6">
                 </div>
             </div>
@@ -325,7 +325,7 @@
                     <div class="col-md-4">
                         <div class="third-point">
                             <div class="third-point-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/1.svg"
+                                <img src="/images/Uploads/1.svg"
                                     alt="Vehicle manufacturers">
                             </div>
                             <h3>Vehicle manufacturers</h3>
@@ -342,7 +342,7 @@
                     <div class="col-md-4">
                         <div class="third-point">
                             <div class="third-point-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/2.svg" alt="Insurers">
+                                <img src="/images/Uploads/2.svg" alt="Insurers">
                             </div>
                             <h3>Insurers</h3>
                         </div>
@@ -358,7 +358,7 @@
                     <div class="col-md-4">
                         <div class="third-point">
                             <div class="third-point-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/3.svg"
+                                <img src="/images/Uploads/3.svg"
                                     alt="Vehicle owners">
                             </div>
                             <h3>Vehicle owners</h3>
