--- a/views/solutions/charity.ejs
+++ b/views/solutions/charity.ejs
@@ -340,17 +340,17 @@
                 <div class="education-slider">
 
                     <div class="education-slide">
-                        <img src="https://openledger.info/wp-content/uploads/2019/07/charity_1.svg">
+                        <img src="/images/Uploads/charity_1.svg">
                         <h3>World Food Program uses Building Blocks to support refugees</h3>
                     </div>
 
                     <div class="education-slide">
-                        <img src="https://openledger.info/wp-content/uploads/2019/07/charity_2.svg">
+                        <img src="/images/Uploads/charity_2.svg">
                         <h3>Unicef Australia created a web page where you can mine crypto for charity</h3>
                     </div>
 
                     <div class="education-slide">
-                        <img src="https://openledger.info/wp-content/uploads/2019/07/charity_3.svg">
+                        <img src="/images/Uploads/charity_3.svg">
                         <h3>St Mungo’s uses Alice, a blockchain platform that shows where your money goes</h3>
                     </div>
                 </div>
