--- a/views/solutions/education.ejs
+++ b/views/solutions/education.ejs
@@ -297,21 +297,21 @@
                 <div class="education-slider">
 
                     <div class="education-slide">
-                        <img src="https://openledger.info/wp-content/uploads/2019/07/education_1.svg">
+                        <img src="/images/Uploads/education_1.svg">
                         <h3>MIT <br> and Blockcerts</h3>
                         <p>MIT uses LearningMachine’s Blockcerts tool to record academic achievement and deliver
                             certification to graduates.</p>
                     </div>
 
                     <div class="education-slide">
-                        <img src="https://openledger.info/wp-content/uploads/2019/07/education_2.svg">
+                        <img src="/images/Uploads/education_2.svg">
                         <h3>The Open University <br> and APPII</h3>
                         <p>The OU uses APPII’s accreditation platform to verify alumni and record student achievement.
                         </p>
                     </div>
 
                     <div class="education-slide">
-                        <img src="https://openledger.info/wp-content/uploads/2019/07/education_3.svg">
+                        <img src="/images/Uploads/education_3.svg">
                         <h3>x2VOL <br> and Parchment</h3>
                         <p>x2VOL logs student voluntary activities and personal reflections as well as classes, offering
                             a more holistic view.</p>
