--- a/views/solutions/legal.ejs
+++ b/views/solutions/legal.ejs
@@ -313,17 +313,17 @@
                 <h3>Law firms that use blockchain</h3>
                 <div class="companies-icons companies-icons6">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/legal_1.svg">
+                    <img src="/images/Uploads/legal_1.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/legal_2.svg">
+                    <img src="/images/Uploads/legal_2.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/legal_3.svg">
+                    <img src="/images/Uploads/legal_3.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/legal_4.svg">
+                    <img src="/images/Uploads/legal_4.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/legal_5.svg">
+                    <img src="/images/Uploads/legal_5.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/legal_6.svg">
+                    <img src="/images/Uploads/legal_6.svg">
 
                 </div>
             </div>
@@ -406,7 +406,7 @@
                         <div class="col-md-4">
                             <div class="third-point">
                                 <div class="third-point-icon">
-                                    <img src="https://openledger.info/wp-content/uploads/2019/09/face-of-legal_1.svg"
+                                    <img src="/images/Uploads/face-of-legal_1.svg"
                                         alt="Professional assistance">
                                 </div>
                                 <h3>Professional assistance</h3>
@@ -421,7 +421,7 @@
                         <div class="col-md-4">
                             <div class="third-point">
                                 <div class="third-point-icon">
-                                    <img src="https://openledger.info/wp-content/uploads/2019/09/face-of-legal_2.svg"
+                                    <img src="/images/Uploads/face-of-legal_2.svg"
                                         alt="White-label blockchain">
                                 </div>
                                 <h3>White-label blockchain</h3>
@@ -437,7 +437,7 @@
                         <div class="col-md-4">
                             <div class="third-point">
                                 <div class="third-point-icon">
-                                    <img src="https://openledger.info/wp-content/uploads/2019/09/face-of-legal_3.svg"
+                                    <img src="/images/Uploads/face-of-legal_3.svg"
                                         alt="Smart<br> applications">
                                 </div>
                                 <h3>Smart<br> applications</h3>
