--- a/views/solutions/retail.ejs
+++ b/views/solutions/retail.ejs
@@ -307,13 +307,13 @@
                 <h3>Retail companies that utilize blockchain:</h3>
                 <div class="companies-icons companies-icons4">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/retail_1.svg" alt="retail_1">
+                    <img src="/images/Uploads/retail_1.svg" alt="retail_1">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/retail_2.svg" alt="retail_2">
+                    <img src="/images/Uploads/retail_2.svg" alt="retail_2">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/retail_3.svg" alt="retail_3">
+                    <img src="/images/Uploads/retail_3.svg" alt="retail_3">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/07/retail_4.svg" alt="retail_4">
+                    <img src="/images/Uploads/retail_4.svg" alt="retail_4">
                 </div>
             </div>
         </div>
@@ -406,7 +406,7 @@
                     <div class="col-md-4">
                         <div class="third-point">
                             <div class="third-point-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/shopping-experiences.svg"
+                                <img src="/images/Uploads/shopping-experiences.svg"
                                     alt="Customized omnichannel shopping experiences">
                             </div>
                             <h3 class="fs18">Customized omnichannel shopping experiences</h3>
@@ -421,7 +421,7 @@
                     <div class="col-md-4">
                         <div class="third-point">
                             <div class="third-point-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/demand-contracts.svg"
+                                <img src="/images/Uploads/demand-contracts.svg"
                                     alt="Consumer demand contracts">
                             </div>
                             <h3 class="fs18">Consumer demand contracts</h3>
@@ -436,7 +436,7 @@
                     <div class="col-md-4">
                         <div class="third-point">
                             <div class="third-point-icon">
-                                <img src="https://openledger.info/wp-content/uploads/2019/03/wallet-based-loyalty-schemes.svg"
+                                <img src="/images/Uploads/wallet-based-loyalty-schemes.svg"
                                     alt="Wallet-based loyalty schemes">
                             </div>
                             <h3 class="fs18">Wallet-based loyalty schemes</h3>
