--- a/views/common/solutions.ejs
+++ b/views/common/solutions.ejs
@@ -6,7 +6,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2018/12/02.svg" alt="IoT">
+                        <img src="/images/Uploads/02.svg" alt="IoT">
                     </div>
                     <h3 class="explore-slide-title">物联网</h3>
                     <p class="explore-slide-desc">
@@ -17,7 +17,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/01/Logistics-1.svg" alt="Logistics">
+                        <img src="/images/Uploads/Logistics-1.svg" alt="Logistics">
                     </div>
                     <h3 class="explore-slide-title">物流运输</h3>
                     <p class="explore-slide-desc">
@@ -28,7 +28,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/01/Healthcare-1.svg" alt="Healthcare">
+                        <img src="/images/Uploads/Healthcare-1.svg" alt="Healthcare">
                     </div>
                     <h3 class="explore-slide-title">医疗健康</h3>
                     <p class="explore-slide-desc">使用区块链技术可更好地保护隐私，有效地交换数据并在医疗保健中保护患者数据。</p>
@@ -37,7 +37,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/02/real-estate.svg" alt="Real estate">
+                        <img src="/images/Uploads/real-estate.svg" alt="Real estate">
                     </div>
                     <h3 class="explore-slide-title">房地产</h3>
                     <p class="explore-slide-desc">探索区块链在房地产中的优势，包括数据管理和财务处理优化。</p>
@@ -46,7 +46,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/03/Insurance.svg" alt="Insurance">
+                        <img src="/images/Uploads/Insurance.svg" alt="Insurance">
                     </div>
                     <h3 class="explore-slide-title">保险</h3>
                     <p class="explore-slide-desc">改变您的部分关键流程，利用区块链在保险行业中的潜力。</p>
@@ -55,7 +55,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/03/automotive.svg" alt="Automotive">
+                        <img src="/images/Uploads/automotive.svg" alt="Automotive">
                     </div>
                     <h3 class="explore-slide-title">汽车行业</h3>
                     <p class="explore-slide-desc">无论是拼车，制造，车辆跟踪，汽车互动，区块链都能为您的业务提供动力。</p>
@@ -64,7 +64,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/03/retail.svg" alt="Retail">
+                        <img src="/images/Uploads/retail.svg" alt="Retail">
                     </div>
                     <h3 class="explore-slide-title">零售</h3>
                     <p class="explore-slide-desc">利用零售区块链建立消费者信任，提高供应链可管理性，防止假冒商品。</p>
@@ -73,7 +73,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/04/education.svg" alt="Education">
+                        <img src="/images/Uploads/education.svg" alt="Education">
                     </div>
                     <h3 class="explore-slide-title">教育</h3>
                     <p class="explore-slide-desc">OpenLedger带来了一支经验丰富的区块链开发人员团队，并为教育项目创建了自定义解决方案。</p>
@@ -82,7 +82,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/04/charity.svg" alt="Charity">
+                        <img src="/images/Uploads/charity.svg" alt="Charity">
                     </div>
                     <h3 class="explore-slide-title">慈善机构</h3>
                     <p class="explore-slide-desc">与捐助者，受助者和其他利益相关者建立信任，确保援助到达合适的人，并提高管理成本。</p>
@@ -91,7 +91,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture.svg" alt="Agriculture">
+                        <img src="/images/Uploads/agriculture.svg" alt="Agriculture">
                     </div>
                     <h3 class="explore-slide-title">农业</h3>
                     <p class="explore-slide-desc">改善分配，为生产者和消费者建立从农场到货架的供应审核，并减少食品欺诈。</p>
@@ -100,7 +100,7 @@
 
                 <div class="explore-slide">
                     <div class="explore-slide-icon">
-                        <img src="https://openledger.info/wp-content/uploads/2019/09/legal.svg" alt="Legal">
+                        <img src="/images/Uploads/legal.svg" alt="Legal">
                     </div>
                     <h3 class="explore-slide-title">法律</h3>
                     <p class="explore-slide-desc">自动执行协议，为文档提供安全且可维护的数据库。</p>
