--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,12 @@
     <meta name="description"
         content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
 
-    <link rel="canonical" href="https://openledger.info/" />
+    <link rel="canonical" href="#" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="企业区块链解决方案，服务和产品-OpenLedger" />
     <meta property="og:description"
         content="OpenLedger为企业和各个行业构建创新的区块链解决方案和产品。 较低的费用并受益于区块链机会，例如令人印象深刻的安全级别，最大的透明度，优化和自动化的流程以及简化的流程。" />
-    <meta property="og:url" content="https://openledger.info/" />
+    <meta property="og:url" content="#" />
     <meta property="og:site_name" content="openledger.info" />
     <meta property="og:image" content="/images/open-grap-openledger-1200-630.jpg" />
     <meta property="og:image:width" content="1200" />
@@ -86,8 +86,8 @@
     <div class="container">
         <div class="row block">
             <div class="col-md-6 image-block image-block-right">
-                <img src="https://openledger.info/wp-content/uploads/2018/12/Blockchain-development-image.png"
-                    srcset="https://openledger.info/wp-content/uploads/2018/12/Blockchain-development-image@2x.png 2x"
+                <img src="/images/Uploads/Blockchain-development-image.png"
+                    srcset="/images/Uploads/Blockchain-development-image@2x.png 2x"
                     alt="Custom blockchain development" />
             </div>
             <div class="col-md-6 image-block-right text-left">
@@ -111,15 +111,15 @@
                 <a href="#contact" class="link">联系我们</a>
             </div>
             <div class="col-md-6 image-block">
-                <img src="https://openledger.info/wp-content/uploads/2019/02/Solutions-image-x.png"
-                    srcset="https://openledger.info/wp-content/uploads/2019/02/Solutions-image-@2x.png 2x"
+                <img src="/images/Uploads/Solutions-image-x.png"
+                    srcset="/images/Uploads/Solutions-image-@2x.png 2x"
                     alt="Blockchain solutions" />
             </div>
         </div>
         <div class="row block">
             <div class="col-md-6 image-block image-block-right">
-                <img src="https://openledger.info/wp-content/uploads/2019/02/Services-image-x.png"
-                    srcset="https://openledger.info/wp-content/uploads/2019/02/Services-image-@2x.png 2x"
+                <img src="/images/Uploads/Services-image-x.png"
+                    srcset="/images/Uploads/Services-image-@2x.png 2x"
                     alt="Blockchain services" />
             </div>
             <div class="col-md-6 image-block-right text-left">
@@ -136,75 +136,23 @@
             <div class="row">
                 <div class="col-md-12 col-lg-6 sphere">
                     <h2>关于 OpenLedger</h2>
-                    <img class="img-fluid" src="https://openledger.info/wp-content/uploads/2019/06/about-home-icon1.svg"
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon1.svg"
                         alt="" />
-                    <img class="img-fluid" src="https://openledger.info/wp-content/uploads/2019/06/about-home-icon2.svg"
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon2.svg"
                         alt="" />
-                    <img class="img-fluid" src="https://openledger.info/wp-content/uploads/2019/06/about-home-icon3.svg"
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon3.svg"
                         alt="" />
-                    <img class="img-fluid" src="https://openledger.info/wp-content/uploads/2019/06/about-home-icon4.svg"
+                    <img class="img-fluid" src="/images/Uploads/about-home-icon4.svg"
                         alt="" />
                 </div>
                 <div class="col-md-12 col-lg-6">
                     <p>我们是一家致力于将区块链技术的力量带到更广阔的商业领域的公司，公司CEO拥有多年的区块链行业产品研发和市场开拓经验。公司总部位于深圳。</p>
                     <p>OpenLedger拥有专业的软件开发和架构专家，为市场营销人员、业务分析师和技术支持人员提供强大的后盾。</p>
                     <p>多年以来，我们一直与全国各地的客户合作，利用现有的区块链解决方案，构建新的去中心化应用程序，为合作伙伴的业务成功提供助力。</p>
-                    <!-- 我们合作的客户可以是来自国内或者国外的企事业单位， -->
-                    <!-- <p>致力于利用现有的底层区块链平台搭建去中心化的应用程序，帮助和推动企事业单位更加高效运作。</p> -->
                 </div>
             </div>
         </div>
     </div>
-    <!--about-->
-
-    <!-- <div class="quote-block quote-block-home">
-        <div class="container">
-            <div class="slider-quote-home">
-                <div class="quote-bg">
-                    <div class="quote">
-                        <div class="row" itemscope="" itemtype="http://schema.org/Person">
-                            <div class="col-md-4">
-                                <img itemprop="image" src="https://openledger.info/wp-content/uploads/2019/05/fox.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/05/fox@2x.png 2x"
-                                    class="img-fluid photo" alt="Ryan R. Fox">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="qu">
-                                    <img src="/images/quotes.svg">
-                                </div>
-                                <div class="text">在过去的一年中，与OpenLedger开发团队合作产生的收益有所增加交付给BitShares Core协议的内容。
-                                    他们是一支精通流利的专业团队区块链设计原则，并能够提供新颖的解决方案。</div>
-                                <div class="name" itemprop="name">Ryan R. Fox</div>
-                                <div class="position" itemprop="jobTitle">BitShares核心团队开发项目经理</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="quote-bg">
-                    <div class="quote">
-                        <div class="row" itemscope="" itemtype="http://schema.org/Person">
-                            <div class="col-md-4">
-                                <img itemprop="image"
-                                    src="https://openledger.info/wp-content/uploads/2019/05/Andryan.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/05/Andryan@2x.png 2x"
-                                    class="img-fluid photo" alt="Vadim Andryan">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="qu">
-                                    <img src="/images/quotes.svg">
-                                </div>
-                                <div class="text">交付的区块链平台非常出色，为公司提供服务他们希望将高质量的技术顺利地交付给他们。
-                                    的团队诚实，透明，能够为合理的客户提供优质的服务价格，考虑到质量水平。</div>
-                                <div class="name" itemprop="name">Vadim Andryan</div>
-                                <div class="position" itemprop="jobTitle">Crypviser GmbH首席执行官</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
     <!-- Content End -->
 
     <!-- Common Footer -->
