--- a/views/solutions/agriculture.ejs
+++ b/views/solutions/agriculture.ejs
@@ -286,13 +286,13 @@
                 <h3>Agriculture companies that use blockchain</h3>
                 <div class="companies-icons companies-icons4">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture1.svg">
+                    <img src="/images/Uploads/agriculture1.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture2.svg">
+                    <img src="/images/Uploads/agriculture2.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture3.svg">
+                    <img src="/images/Uploads/agriculture3.svg">
 
-                    <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture4.svg">
+                    <img src="/images/Uploads/agriculture4.svg">
 
                 </div>
             </div>
@@ -304,7 +304,7 @@
 
                     <div class="agroculture-slide">
                         <div class="agroculture-slide-img">
-                            <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture1_146.svg">
+                            <img src="/images/Uploads/agriculture1_146.svg">
                         </div>
                         <p><strong>Ripe.io</strong> blockchain platform for tracking food origins attracted investments
                             from the shipping giant Maersk</p>
@@ -312,7 +312,7 @@
 
                     <div class="agroculture-slide">
                         <div class="agroculture-slide-img">
-                            <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture2_146.svg">
+                            <img src="/images/Uploads/agriculture2_146.svg">
                         </div>
                         <p><strong>Walmart</strong> is using IBM’s Food Trust Solution to tackle fraud by providing
                             provenance and traceability through blockchain </p>
@@ -320,7 +320,7 @@
 
                     <div class="agroculture-slide">
                         <div class="agroculture-slide-img">
-                            <img src="https://openledger.info/wp-content/uploads/2019/09/agriculture3_146.svg">
+                            <img src="/images/Uploads/agriculture3_146.svg">
                         </div>
                         <p><strong>EVRYTHING</strong>, an IoT platform for consumer product brands, trialed the
                             OriginTrail production verification protocol</p>
